fixed font on safari

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-	font-family: "Roboto Condensed";
+	font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;;
 }
 
 .logo-color {
